@@ -19,10 +19,7 @@ import com.intellij.openapi.util.TextRange;
 import com.intellij.openapi.vfs.VirtualFile;
 import com.intellij.pom.java.JavaFeature;
 import com.intellij.psi.*;
-import com.intellij.psi.util.PsiModificationTracker;
-import com.intellij.psi.util.PsiTreeUtil;
-import com.intellij.psi.util.PsiUtil;
-import com.intellij.psi.util.PsiUtilCore;
+import com.intellij.psi.util.*;
 import com.intellij.util.containers.ContainerUtil;
 import org.jetbrains.annotations.ApiStatus;
 import org.jetbrains.annotations.NotNull;
@@ -64,9 +61,13 @@ public abstract class StaticImportMemberFix<T extends PsiMember, R extends PsiEl
     myPsiModificationCount = PsiModificationTracker.getInstance(project).getModificationCount();
   }
 
-  private static boolean isValidCandidate(PsiFile psiFile, PsiMember candidate){
+  private static boolean isValidCandidate(@NotNull PsiFile psiFile, @NotNull PsiMember candidate){
     if (!candidate.isValid()) return false;
     if (PsiUtil.isMemberAccessibleAt(candidate, psiFile)) return true;
+    PsiImplicitClass possibleImplicitClass = PsiTreeUtil.getParentOfType(candidate, PsiImplicitClass.class);
+    if (possibleImplicitClass != null) {
+      if (!psiFile.equals(candidate.getContainingFile())) return false;
+    }
     VirtualFile virtualFile = PsiUtilCore.getVirtualFile(candidate);
     if (virtualFile == null) return false;
     return ProjectFileIndex.getInstance(psiFile.getProject()).isInContent(virtualFile);
@@ -77,7 +78,7 @@ public abstract class StaticImportMemberFix<T extends PsiMember, R extends PsiEl
     PsiElement copy = PsiTreeUtil.findSameElementInCopy(getElement(), psiFile);
     if (copy == null) return IntentionPreviewInfo.EMPTY;
     if (candidates.isEmpty()) return IntentionPreviewInfo.EMPTY;
-    T element = candidates.get(0);
+    T element = candidates.getFirst();
     PsiClass containingClass = element.getContainingClass();
     if (containingClass == null) return IntentionPreviewInfo.EMPTY;
     consumer.accept(copy, element);
@@ -92,7 +93,7 @@ public abstract class StaticImportMemberFix<T extends PsiMember, R extends PsiEl
 
   @Override
   public @NotNull String getText() {
-    return getBaseText() + (candidates == null || candidates.size() != 1 ? "..." : " '" + getMemberPresentableText(candidates.get(0)) + "'");
+    return getBaseText() + (candidates == null || candidates.size() != 1 ? "..." : " '" + getMemberPresentableText(candidates.getFirst()) + "'");
   }
 
   @Override
@@ -156,7 +157,7 @@ public abstract class StaticImportMemberFix<T extends PsiMember, R extends PsiEl
       return false;
     }
 
-    T firstCandidate = candidates.get(0);
+    T firstCandidate = candidates.getFirst();
     PsiFile containingFile = callExpression.getContainingFile();
     if (containingFile == null || isPsiModificationStampChanged(containingFile.getProject())) {
       return false;
